--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!-- added concise and descriptive title -->
+    <title>Horiseon Search Engine Optimization Business and Social Solutions Services</title>
 </head>
 
 <body>
@@ -26,7 +27,9 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <!-- added id attribute -->
+        <div id="search-engine-optimization" class="search-engine-optimization">
+            <!-- added image alt text -->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -34,6 +37,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
+            <!-- added image alt text -->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -41,6 +45,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
+            <!-- added image alt text -->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -51,6 +56,7 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
+            <!-- added image alt text -->
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -58,6 +64,7 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
+            <!-- added image alt text -->
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -65,6 +72,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
+            <!-- added image alt text -->
             <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
@@ -72,6 +80,7 @@
         </div>
     </div>
     <div class="footer">
+        <!-- changed heading from h2 to h4 -->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
