--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
+<!-- changed to semantic element -->
 <header>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- added concise and descriptive title -->
     <title>Horiseon Search Engine Optimization Business and Social Solutions Services</title>
+    <!-- changed to semantic element -->
 </header>
-
-<body>
-    <div class="header">
+<!-- changed to semantic element -->
+<main>
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,7 +25,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
 
     <div class="hero"></div>
     <div class="content">
@@ -80,13 +81,16 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <!-- changed to semantic element -->
+    <footer class="footer">
         <!-- changed heading from h2 to h4 -->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
-</body>
+        <!-- changed to semantic element -->
+    </footer>
+    <!-- changed to semantic element -->
+</main>
 
 </html>
