added html feature

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<!-- changed to semantic element -->
+<!-- Changed tags to semantic elements throughout HTML -->
 <header>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- added concise and descriptive title -->
     <title>Horiseon Search Engine Optimization Business and Social Solutions Services</title>
-    <!-- changed to semantic element -->
 </header>
-<!-- changed to semantic element -->
 <main>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -81,16 +79,13 @@
             </p>
         </figure>
     </aside>
-    <!-- changed to semantic element -->
     <footer class="footer">
         <!-- changed heading from h2 to h4 -->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-        <!-- changed to semantic element -->
     </footer>
-    <!-- changed to semantic element -->
 </main>
 
 </html>
